test/cilium/base/echo/cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: echo-sa
spec:
  endpointSelector:
    matchLabels:
      app: echo
      io.cilium.k8s.policy.serviceaccount: echo
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: prober
        io.kubernetes.pod.namespace: prober-00
        io.cilium.k8s.policy.serviceaccount: prober
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: "/.*"
  egress:
  - toEndpoints:
    - {}
