test/cilium/base/echo/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: echo-00

resources:
  - ./ns.yaml
  - ./deploy.yaml
  - ./sa.yaml
  - ./svc.yaml
 # - ./cnp.yaml


replicas:
  - name: echo
    count: 1

patchesStrategicMerge:
  - ./deploy.env.patch.yaml
  - ./deploy.res.patch.yaml
