test/cilium/base/echo/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  annotations:
    io.cilium/global-service: "true"
    #io.cilium/service-affinity: "local"
    #io.cilium/shared-service: "false"
  labels:
    app: echo
    service: echo
spec:
  ports:
  - name: http
    port: 63636
    targetPort: http
  selector:
    app: echo
